# Divide_PLY

./: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  util.cpp  util.h
include/: PLYIO.h  selectPoint.h
lib/: CMakeLists.txt  PLYIO.cpp  selectPoint.cpp
refrence/grid_map_generator/: CMakeLists.txt
refrence/grid_map_generator/include/: pcd_grid_divider.h
refrence/grid_map_generator/src/: main.cpp  pcd_grid_divider.cpp
src/: divideMap.cpp  ply2pcd.cpp
